--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -1,15 +1,487 @@
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+
 .homepage {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    /* background: black; */
     min-height: 50vh;
     width: 75%;
     padding: 10px;
     margin: 5px auto;
 }
 
+.homepage-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
+    /* background: black; */
+    background: rgb(48, 48, 48);
+    /* background: #061c3a; */
+    box-shadow: inset rgba(0, 0, 0, 0.9) 0px 15px 30px;
+    font-family: 'Kaushan Script', cursive;
+    transform-style: preserve-3d;
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.homepage-header .website-logo {
+    width: 40%;
+    margin: 10px 60px 10px 10px;
+    transform-style: preserve-3d;
+    border-radius: 50%;
+    transform: translateZ(0);
+}
+
+.homepage-header .website-logo img {
+    width: 100%;
+    transform-style: preserve-3d;
+    transform: translateZ(0);
+}
+
+.homepage-header:hover .website-logo {
+    transform: translateZ(0) rotateZ(0deg);
+    transform-style: preserve-3d;
+    animation: animate-logo 3s infinite;
+}
+
+.homepage-header .website-logo:before {
+    content: '';
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 35px;
+    left: 60%;
+    border-radius: 50%;
+    transform-style: preserve-3d;
+    transform: translateZ(0) rotateZ(30deg);
+    box-shadow: rgba(98, 205, 255, 0) 0px -25px 25px;
+}
+
+.homepage-header:hover .website-logo:before {
+    animation: spell-cast 3s infinite;
+}
+
+@keyframes spell-cast {
+    0% {
+        width: 50px;
+        height: 50px;
+        top: 35px;
+        left: 60%;
+        box-shadow: rgba(98, 205, 255, .1) 0px -25px 25px;
+    }
+    45% {
+        width: 100px;
+        height: 100px;
+        top: 35px;
+        left: 48%;
+        box-shadow: rgba(98, 205, 255, .5) 0px -25px 25px;
+    }
+    50% {
+        width: 50px;
+        height: 50px;
+        top: -50px;
+        left: 60%;
+        box-shadow: rgba(98, 205, 255, 1) 0px -25px 15px;
+    }
+    55% {
+        width: 50px;
+        height: 50px;
+        top: 35px;
+        left: 60%;
+        box-shadow: rgba(98, 205, 255, 0) 0px -25px 25px;
+    }
+    100% {
+        width: 50px;
+        height: 50px;
+        top: 35px;
+        left: 60%;
+        box-shadow: rgba(98, 205, 255, 0) 0px -25px 25px;
+    }
+}
+
+@keyframes animate-logo {
+    0% {
+        transform: translateZ(0) rotateZ(0deg);
+    }
+    45% {
+        transform: translateZ(0) rotateZ(-65deg);
+    }
+    50% {
+        transform: translateZ(0) rotateZ(75deg);
+    }
+    100% {
+        transform: translateZ(0) rotateZ(0deg);
+    }
+}
+
 .homepage h1 {
     text-align: center;
-    color: #0d428c;
+    width: 25%;
+    color: white;
+    transform-style: preserve-3d;
+    transform: perspective(700px) translateZ(50px) rotateX(0deg) rotateZ(0deg) rotateY(0deg);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.homepage .homepage-header:hover h1 {
+    animation: animate-title 3s infinite;
+}
+
+@keyframes animate-title {
+    0% {
+        font-family: Arial, Helvetica, sans-serif;
+        transform: perspective(700px) translateZ(50px) rotateX(0deg) rotateZ(0deg) rotateY(0deg);
+    }
+    45% {
+        transform: perspective(700px) translateZ(50px) rotateX(0deg) rotateZ(0deg) rotateY(0deg);
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    50% {
+        transform: perspective(700px) translateZ(50px) rotateX(0deg) rotateZ(0deg) rotateY(0deg);
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+        text-shadow: none;
+    }
+    60% {
+        transform: perspective(700px) translateZ(200px) rotateX(-25deg) rotateZ(-15deg) rotateY(720deg);
+        font-family: 'Kaushan Script', cursive;
+        color: white; 
+        text-shadow: 0 0 5px rgb(48, 48, 48), 
+                    0 0 25px rgba(98, 205, 255, 1);
+    }
+    95% {
+        transform: perspective(700px) translateZ(200px) rotateX(-25deg) rotateZ(-15deg) rotateY(720deg);
+        font-family: 'Kaushan Script', cursive;
+        color: white; 
+        text-shadow: none;
+    }
+    100% {
+        transform: perspective(700px) translateZ(50px) rotateX(0deg) rotateZ(0deg) rotateY(0deg);
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+        text-shadow: none;
+    }
+}
+
+.homepage-body {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+}
+
+.homepage-body .divider {
+    border-bottom: 2px solid white;
+    width: 100%;
+    margin: 10px auto;
+}
+
+.homepage-citation {
+    width: 100%;
+    /* background: rgb(48, 48, 48); */
+    background: #4f0707;
+    box-shadow: inset rgba(0, 0, 0, 0.9) 0px 15px 30px;
+    padding: 20px;
+    align-items: center;
+}
+
+.homepage-citation h2 {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.homepage-citation p {
+    color: white;
+    margin: 10px;
+}
+
+.homepage-citation .homepage-icons {
+    margin: 0px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.homepage-citation .icon-container {
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.homepage-citation .homepage-icon {
+    display: block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    font-size: 40px;
+    text-align: center;
+    text-decoration: none;
+    color: rgb(38, 38, 38);
+    margin: 5px;
+    transition: all 0.5s ease 0s;
+}
+
+.homepage-citation .homepage-icons.dark .homepage-icon {
+    color: rgb(255, 255, 255);
+}
+
+.homepage-citation .homepage-icons.light .homepage-icon {
+    color: rgb(38, 38, 38);
+}
+
+.homepage-citation .homepage-icon.xlg {
+    width: 110px;
+    height: 110px;
+    line-height: 110px;
+    font-size: 55px;
+}
+
+.homepage-citation .homepage-icon.lg {
+    width: 90px;
+    height: 90px;
+    line-height: 90px;
+    font-size: 45px;
+}
+
+.homepage-citation .homepage-icon.md {
+    width: 70px;
+    height: 70px;
+    line-height: 70px;
+    font-size: 35px;
+}
+
+.homepage-citation .homepage-icon.sm {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 25px;
+}
+
+.homepage-citation .homepage-icon.xs {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 15px;
+}
+
+.homepage-citation .homepage-icon span {
+    position: absolute;
+    transition: transform 0.5s ease 0s;
+}
+
+.homepage-citation .homepage-icon span:nth-child(1), 
+.homepage-citation .homepage-icon span:nth-child(3) {
+    width: 100%;
+    height: 1px;
+    background: rgb(38, 38, 38);
+}
+
+.homepage-citation .homepage-icons.light .homepage-icon span:nth-child(1), 
+.homepage-citation .homepage-icons.light .homepage-icon span:nth-child(3) {
+    background: rgb(38, 38, 38);
+}
+
+.homepage-citation .homepage-icons.dark .homepage-icon span:nth-child(1), 
+.homepage-citation .homepage-icons.dark .homepage-icon span:nth-child(3) {
+    background: rgb(255, 255, 255);
+}
+
+.homepage-citation .homepage-icon.bd-thin span:nth-child(1), 
+.homepage-citation .homepage-icon.bd-thin span:nth-child(3) {
+    height: 1px;
+}
+
+.homepage-citation .homepage-icon.bd-nm span:nth-child(1), 
+.homepage-citation .homepage-icon.bd-nm span:nth-child(3) {
+    height: 2px;
+}
+
+.homepage-citation .homepage-icon.bd-thicc span:nth-child(1), 
+.homepage-citation .homepage-icon.bd-thicc span:nth-child(3) {
+    height: 3px;
+}
+
+.homepage-citation .homepage-icon span:nth-child(1) {
+    top: 0px;
+    left: 0px;
+    transform-origin: right center;
+}
+
+.homepage-citation .homepage-icon:hover span:nth-child(1) {
+    transform: scaleX(0);
+    transform-origin: left center;
+    transition: transform 0.5s ease 0s;
+}
+
+.homepage-citation .homepage-icon span:nth-child(3) {
+    bottom: 0px;
+    left: 0px;
+    transform-origin: left center;
+}
+
+.homepage-citation .homepage-icon:hover span:nth-child(3) {
+    transform: scaleX(0);
+    transform-origin: right center;
+    transition: transform 0.5s ease 0s;
+}
+
+.homepage-citation .homepage-icon span:nth-child(2), .homepage-icon span:nth-child(4) {
+    width: 1px;
+    height: 100%;
+    background: rgb(38, 38, 38);
+}
+
+.homepage-citation .homepage-icon.bd-thin span:nth-child(2), .homepage-icon.bd-thin span:nth-child(4) {
+    width: 1px;
+}
+
+.homepage-citation .homepage-icon.bd-nm span:nth-child(2), .homepage-icon.bd-nm span:nth-child(4) {
+    width: 2px;
+}
+
+.homepage-citation .homepage-icon.bd-thicc span:nth-child(2), .homepage-icon.bd-thicc span:nth-child(4) {
+    width: 3px;
+}
+
+.homepage-citation .homepage-icons.light .homepage-icon span:nth-child(2), 
+.homepage-citation .homepage-icons.light .homepage-icon span:nth-child(4) {
+    background: rgb(38, 38, 38);
+}
+
+.homepage-citation .homepage-icons.dark .homepage-icon span:nth-child(2), 
+.homepage-citation .homepage-icons.dark .homepage-icon span:nth-child(4) {
+    background: rgb(255, 255, 255);
+}
+
+.homepage-citation .homepage-icon span:nth-child(2) {
+    top: 0px;
+    left: 0px;
+    transform: scaleY(0);
+    transform-origin: center bottom;
+}
+
+.homepage-citation .homepage-icon:hover span:nth-child(2) {
+    transform: scaleY(1);
+    transform-origin: center top;
+    transition: transform 0.5s ease 0s;
+}
+
+.homepage-citation .homepage-icon span:nth-child(4) {
+    top: 0px;
+    right: 0px;
+    transform: scaleY(0);
+    transform-origin: center top;
+}
+
+.homepage-citation .homepage-icon:hover span:nth-child(4) {
+    transform: scaleY(1);
+    transform-origin: center bottom;
+    transition: transform 0.5s ease 0s;
+}
+
+.homepage-citation .homepage-icon.facebook:hover {
+    color: rgb(59, 89, 153);
+}
+
+.homepage-citation .homepage-icon.facebook:hover span:nth-child(1), 
+.homepage-citation .homepage-icon.facebook:hover span:nth-child(2), 
+.homepage-citation .homepage-icon.facebook:hover span:nth-child(3), 
+.homepage-citation .homepage-icon.facebook:hover span:nth-child(4) {
+    background: rgb(59, 89, 153);
+}
+
+.homepage-citation .homepage-icon.youtube:hover {
+    color: #ff0000;
+}
+
+.homepage-citation .homepage-icon.youtube:hover span:nth-child(1), 
+.homepage-citation .homepage-icon.youtube:hover span:nth-child(2), 
+.homepage-citation .homepage-icon.youtube:hover span:nth-child(3), 
+.homepage-citation .homepage-icon.youtube:hover span:nth-child(4) {
+    background: #ff0000;
+}
+
+.homepage-citation .homepage-icon.paypal:hover {
+    color: #009cde;
+}
+
+.homepage-citation .homepage-icon.paypal:hover span:nth-child(1), 
+.homepage-citation .homepage-icon.paypal:hover span:nth-child(2), 
+.homepage-citation .homepage-icon.paypal:hover span:nth-child(3), 
+.homepage-citation .homepage-icon.paypal:hover span:nth-child(4) {
+    background: #009cde;
+}
+
+.homepage-citation .homepage-icon.patreon:hover {
+    color: #f96e5c;
+}
+
+.homepage-citation .homepage-icon.patreon:hover span:nth-child(1), 
+.homepage-citation .homepage-icon.patreon:hover span:nth-child(2), 
+.homepage-citation .homepage-icon.patreon:hover span:nth-child(3), 
+.homepage-citation .homepage-icon.patreon:hover span:nth-child(4) {
+    background: #f96e5c;
+}
+
+.homepage-citation .homepage-icon.udemy svg {
+    position: absolute;
+    top: 20%;
+    left: 20%;
+}
+
+.homepage-citation .homepage-icon.udemy svg {
+    fill: rgb(255, 255, 255);
+    width: 50px;
+    height: 50px;
+}
+
+.homepage-citation .homepage-icon.udemy:hover svg {
+    fill: #eb524f;
+}
+
+.homepage-citation .homepage-icon.udemy:hover {
+    color: #eb524f;
+}
+
+.homepage-citation .homepage-icon.udemy:hover span:nth-child(1), 
+.homepage-citation .homepage-icon.udemy:hover span:nth-child(2), 
+.homepage-citation .homepage-icon.udemy:hover span:nth-child(3), 
+.homepage-citation .homepage-icon.udemy:hover span:nth-child(4) {
+    background: #eb524f;
+}
+
+.homepage-body p {
+    margin: 10px 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+.homepage-info {
+    width: 100%;
+    margin: 20px 0;
+    padding: 20px;
+    background: rgb(48, 48, 48);
+    background: #07254f;
+    box-shadow: inset rgba(0, 0, 0, 0.9) 0px 15px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.homepage-info p {
+    color: white;
+}
+
+.homepage-info h2 {
+    width: 100%;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
