--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -485,3 +485,258 @@
     color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.homepage-info img {
+    width: 80%;
+}
+
+@media (max-width: 1060px) {
+    .homepage h1 {
+        width: 30%;
+        font-size: 28px;
+    }
+}
+
+@media (max-width: 855px) {
+    .homepage-header .website-logo {
+        width: 35%;
+        margin: 10px 55px 10px 10px;
+    }
+
+    .homepage-header .website-logo:before {
+        width: 45px;
+        height: 45px;
+        top: 30px;
+        left: 60%;
+        box-shadow: rgba(98, 205, 255, 0) 0px -20px 20px;
+    }
+    
+    @keyframes spell-cast {
+        0% {
+            width: 45px;
+            height: 45px;
+            top: 30px;
+            left: 60%;
+            box-shadow: rgba(98, 205, 255, .1) 0px -20px 20px;
+        }
+        45% {
+            width: 80px;
+            height: 80px;
+            top: 30px;
+            left: 48%;
+            box-shadow: rgba(98, 205, 255, .5) 0px -20px 20px;
+        }
+        50% {
+            width: 45px;
+            height: 45px;
+            top: -45px;
+            left: 60%;
+            box-shadow: rgba(98, 205, 255, 1) 0px -20px 10px;
+        }
+        55% {
+            width: 45px;
+            height: 45px;
+            top: 30px;
+            left: 60%;
+            box-shadow: rgba(98, 205, 255, 0) 0px -20px 20px;
+        }
+        100% {
+            width: 45px;
+            height: 45px;
+            top: 30px;
+            left: 60%;
+            box-shadow: rgba(98, 205, 255, 0) 0px -20px 20px;
+        }
+    }
+}
+
+@media (max-width: 670px) {
+    .homepage-header .website-logo {
+        width: 35%;
+        margin: 10px 50px 10px 10px;
+    }
+
+    .homepage-header .website-logo:before {
+        width: 40px;
+        height: 40px;
+        top: 25px;
+        left: 55%;
+        box-shadow: rgba(98, 205, 255, 0) 0px -20px 20px;
+    }
+    
+    @keyframes spell-cast {
+        0% {
+            width: 40px;
+            height: 40px;
+            top: 22px;
+            left: 55%;
+            box-shadow: rgba(98, 205, 255, .1) 0px -20px 20px;
+        }
+        45% {
+            width: 70px;
+            height: 70px;
+            top: 22px;
+            left: 45%;
+            box-shadow: rgba(98, 205, 255, .5) 0px -20px 20px;
+        }
+        50% {
+            width: 40px;
+            height: 40px;
+            top: -40px;
+            left: 60%;
+            box-shadow: rgba(98, 205, 255, 1) 0px -20px 10px;
+        }
+        55% {
+            width: 40px;
+            height: 40px;
+            top: 22px;
+            left: 60%;
+            box-shadow: rgba(98, 205, 255, 0) 0px -20px 20px;
+        }
+        100% {
+            width: 40px;
+            height: 40px;
+            top: 22px;
+            left: 60%;
+            box-shadow: rgba(98, 205, 255, 0) 0px -20px 20px;
+        }
+    }
+
+    .homepage h1 {
+        width: 30%;
+        font-size: 26px;
+    }
+}
+
+@media (max-width: 630px) {
+    .homepage h1 {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 585px) {
+    .homepage h1 {
+        width: 35%;
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 524px) {
+    .homepage-header .website-logo {
+        width: 30%;
+        margin: 10px 50px 10px 10px;
+    }
+    
+    .homepage-header .website-logo:before {
+        width: 20px;
+        height: 20px;
+        top: 10px;
+        left: 50%;
+        box-shadow: rgba(98, 205, 255, 0) 0px -10px 15px;
+    }
+
+    @keyframes spell-cast {
+        0% {
+            width: 20px;
+            height: 20px;
+            top: 10px;
+            left: 50%;
+            box-shadow: rgba(98, 205, 255, .1) 0px -10px 15px;
+        }
+        45% {
+            width: 35px;
+            height: 35px;
+            top: 5px;
+            left: 45%;
+            box-shadow: rgba(98, 205, 255, .5) 0px -10px 15px;
+        }
+        50% {
+            width: 20px;
+            height: 20px;
+            top: -25px;
+            left: 60%;
+            box-shadow: rgba(98, 205, 255, 1) 0px -10px 10px;
+        }
+        55% {
+            width: 20px;
+            height: 20px;
+            top: 10px;
+            left: 60%;
+            box-shadow: rgba(98, 205, 255, 0) 0px -10px 15px;
+        }
+        100% {
+            width: 20px;
+            height: 20px;
+            top: 10px;
+            left: 60%;
+            box-shadow: rgba(98, 205, 255, 0) 0px -10px 15px;
+        }
+    }
+
+    .homepage h1 {
+        width: 25%;
+        font-size: 18px;
+    }
+
+    .homepage-citation .homepage-icon {
+        margin: 12px;
+    }
+
+    .homepage-info p {
+        font-size: 14px;
+    }
+    
+    .homepage-info h2 {
+        font-size: 22px;
+    }
+
+    .homepage-citation h2 {
+        font-size: 22px;
+    }
+
+    .homepage-citation p {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 475px) {
+    .homepage h1 {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 420px) {
+    .homepage h1 {
+        width: 30%;
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 370px) {
+    .homepage-header .website-logo {
+        margin: 10px 35px 10px 10px;
+    }
+}
+
+@media (max-width: 350px) {
+    .homepage h1 {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 320px) {
+    .homepage h1 {
+        width: 35%;
+    }
+}
+
+@media (max-width: 300px) {
+    .homepage-header .website-logo {
+        margin: 10px 25px 10px 10px;
+    }
+
+    .homepage h1 {
+        width: 40%;
+        font-size: 10px;
+    }
+}
