--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -28,7 +28,7 @@
 }
 
 .homepage-header .website-logo {
-    width: 40%;
+    width: 30%;
     margin: 10px 60px 10px 10px;
     transform-style: preserve-3d;
     border-radius: 50%;
@@ -175,9 +175,13 @@
 }
 
 .homepage-body .divider {
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid #0d428c;
     width: 100%;
     margin: 10px auto;
+}
+
+.homepage-body .homepage-citation .divider {
+    border-bottom: 2px solid white;
 }
 
 .homepage-citation {
@@ -468,21 +472,21 @@
     width: 100%;
     margin: 20px 0;
     padding: 20px;
-    background: rgb(48, 48, 48);
-    background: #07254f;
-    box-shadow: inset rgba(0, 0, 0, 0.9) 0px 15px 30px;
+    /* background: rgb(48, 48, 48); */
+    /* background: #07254f; */
+    /* box-shadow: inset rgba(0, 0, 0, 0.9) 0px 15px 30px; */
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #0d428c;
 }
 
 .homepage-info p {
-    color: white;
+    line-height: 20px;
 }
 
 .homepage-info h2 {
     width: 100%;
-    color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
 
